@@ -1,3 +1,5 @@
+/*	$NetBSD: infcodes.h,v 1.2 1996/09/13 00:30:28 cgd Exp $	*/
+
 /* infcodes.h -- header to use infcodes.c
  * Copyright (C) 1995-1996 Mark Adler
  * For conditions of distribution and use, see copyright notice in zlib.h 
