@@ -1,9 +1,9 @@
+/*	$NetBSD: uncompr.c,v 1.2 1996/09/13 00:30:45 cgd Exp $	*/
+
 /* uncompr.c -- decompress a memory buffer
  * Copyright (C) 1995-1996 Jean-loup Gailly.
  * For conditions of distribution and use, see copyright notice in zlib.h 
  */
-
-/* $Id: uncompr.c,v 1.1.1.1 1996/09/12 15:33:10 gwr Exp $ */
 
 #include "zlib.h"
 
