@@ -1,3 +1,4 @@
+$NetBSD: ChangeLog,v 1.2 1996/09/13 00:29:49 cgd Exp $
 
 		ChangeLog file for zlib
 
